# movesion-simulator

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
movesion_simulator/: .env.example  __init__.py
movesion_simulator/api/: __init__.py  main.py  schemas.py
movesion_simulator/api/routes/: __init__.py  health.py  pricing.py  simulation.py
movesion_simulator/config/: __init__.py  settings.py
movesion_simulator/data/: pricing_plan_wallester.json  scenario_presets.json
movesion_simulator/engine/: __init__.py  model.py  tiers.py  types.py
movesion_simulator/tests/: __init__.py  test_api.py  test_model.py  test_tiers.py
movesion_simulator/ui/: app.py
